# MiniPureScript

./: .gitignore  Makefile  README.md  remarks  report.tex
lib/: AllocAst.ml  Ast.ml  CustomFormat.ml  Lexer.mll  Parser.mly  ParserError.ml  PostLexer.ml  TAst.ml  Temp.ml  Tokens.mly  TypedAst.ml  Typing.ml  TypingError.ml  dune  lexer.mll  parser.mly  postLexer.ml  postLexer.mli  utils.ml  x86_64.ml  x86_64.mli
lib/code_prod/: AllocAst.ml  Allocation.ml  CompileBoolean.ml  CompileExpr.ml  CompileInt.ml  CompileLibC.ml  CompileProg.ml  CompileString.ml  CompileToX86Utils.ml  CompileUtils.ml  ExprToX86.ml  ExprrToX86.ml  Label.ml  Label.mli  To86.ml  To86Utils.ml  X86CompileBoolean.ml  X86CompileExpr.ml  X86CompileInt.ml  X86CompileProg.ml  X86CompileString.ml  X86CompileUtils.ml  x86_64.ml  x86_64.mli
lib/errors/: ErrorPP.ml  ParserError.ml  TypingError.ml
lib/symplification/: CommonSymplify.ml  ConstantMachingSymplify.ml  OperationSymplify.ml  Simplify.ml  SympAst.ml
lib/typing/: CommonTyping.ml  CompileCase.ml  DefaultTypingEnv.ml  DefaultTypingEnv.mli  ExpressionTyping.ml  Ids.ml  Ids.mli  PatternTyping.ml  ResolveInstance.ml  TypedAst.ml  Typing.ml  TypingError.ml
lib/utils/: DefaultTypingEnv.ml  DefaultTypingEnv.mli  Monoid.ml  Monoid.mli  PP.ml  PP.mli
spago/src/: Main.purs  Main.s
test/: dune  files.ml  lexer.ml  partie1.ml  partie2.ml  partie3.ml
test-files/: test
test-files/exec/: arith4.out  arith4.purs  case4.out  case4.purs  concat-and-strcmp.out  concat-and-strcmp.purs  division.out  division.purs  effect_and_inst.out  effect_and_inst.purs  (+14 more)
(+1 files in other folders)
