(include_subdirs unqualified)

(ocamllex
 (modules Lexer))

; Compile tokens.mly into a definition of the type [token].

(menhir
 (modules Tokens)
 (flags --only-tokens))

(menhir
 (modules Tokens Parser)
 (merge_into Parser)
 (flags --external-tokens Tokens))

(library
 (name MiniPureScriptLib))

; (env
;  (dev
;   (flags :standard -warn-error -27-32-69-34-37)))
